# rui-meeting-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  config.py  db.py  gemini_client.py  gmail_imap_client.py  graph_client.py  main.py  schemas.py  utils.py
