[project]
name = "mail-automation"
version = "0.1.0"
description = "Email-driven meeting scheduling with Microsoft Graph + Gemini"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "email-validator>=2.1",
]

[tool.uvicorn]
factory = false

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
]
